# base_learn

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.c
Leetcode/: leet48.h
algorithmCode/: biTreealg.h  findMax.h  maxSub.h
baseCpp/: assert_debug.h  autoptr.h  bigIntMul.h  cppThreadMutex.h  floatInmem.h  myalloc.h  readFile.h  roundoutNumWithArr.h  sharedPtr.h  strip_string.h  unnameObject.h  vitural_fun_inherit.h
eigenLearn/: main  main.cpp
elementsOfProgramming/: funAdd.h
home/liujinfu/workspace/base_learn/: CMakeLists.txt  README.md  main.cpp  txt.txt
home/liujinfu/workspace/base_learn/algorithmCode/: arrayAspram.h  bigIntMul.h  jpegZ.h  sortalgori.h  subStrss.h
home/liujinfu/workspace/base_learn/baseCpp/: arrayMeth.h  avoid_dump_delete.h  operatorNew.h  placementNew.h  pointAndreference.h  rtti.h  virtual_run_time.h  virtual_table.h
home/liujinfu/workspace/base_learn/myArray/: myArraytest.h
home/liujinfu/workspace/base_learn/mystring/: mystring.cpp  mystring.h  mystringtest.h
home/liujinfu/workspace/base_learn/others/: vitural_table.cpp
home/liujinfu/workspace/base_learn/templateTest/: readme.md
markdownfiles/: 公式.md
myArray/: myArray.cpp  myArray.h
others/: FP  FunPoint.cpp  fork.cpp  sizeof_test.c  sizeof_test.s  vt
parallelCode/: pth_hello  pth_hello.c  run.sh  test.c
templateTest/: readme.md  templateTest.cpp  templateTest.h
